corrected display of sign in button on nav collapse

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6, p{
     transition: var(--transition);
     cursor: pointer;
     outline: none;
-
+    
 }
 
 .nav-toggle{
@@ -136,7 +136,8 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 .show-links{
-    height: 400px;
+    height: 500px;
+    
 }
 .upper{
     text-transform: uppercase;
